@@ -173,6 +173,7 @@ TEZ-UI CHANGES (TEZ-8):
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
+  TEZ-2257. Fix potential NPEs in TaskReporter.
   TEZ-2192. Relocalization does not check for source.
   TEZ-2224. EventQueue empty doesn't mean events are consumed in RecoveryService
   TEZ-2240. Fix toUpperCase/toLowerCase to use Locale.ENGLISH.
